--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <button data-set="day4">4-day</button>
             <button data-set="day5">5-day</button>
             <button data-set="day6">6-day</button>
+            <button data-set="day7">7-day</button>
+            <button data-set="day8">8-day</button>
             <button data-set="verbs">Irregular verbs</button>
         </nav>
     </header>
@@ -28,3 +30,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
